creusot/tests/should_fail/prusti/deny_zombies/call.stderr
error: T@'a cannot be moved to 'curr since it isn't copy
       otherwise it would become a zombie
  --> call.rs:11:11
   |
11 | #[ensures(fin(result) == *result)]
   |           ^^^^^^^^^^^
   |
note: the lint level is defined here
  --> call.rs:10:8
   |
10 | #[deny(creusot::prusti_zombie)]
   |        ^^^^^^^^^^^^^^^^^^^^^^

error[creusot]: T@'a cannot be moved to 'curr since it isn't copy
                required by equality check
  --> call.rs:11:11
   |
11 | #[ensures(fin(result) == *result)]
   |           ^^^^^^^^^^^

error: aborting due to 2 previous errors

